# Base_fastapi_app

./: README.md  docker-compose.yml  dockerfile  pyproject.toml
fastapi-application/: .env.template  config.py  main.py
fastapi-application/actions/: create_superuser.py
fastapi-application/alembic/: env.py
fastapi-application/alembic/versions/: 2025_08_17_2028-5e039d47f5aa_create_a_user_with_fastapi_user.py  2025_08_17_2204-f932ad5ae9f3_create_access_token.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: __init__.py  auth.py  fastapi_users.py  messages.py  users.py
fastapi-application/api/dependancy/: access_token.py  bakend.py  depends_user_maneger.py  fastapi_users.py  strategy.py
fastapi-application/api/dependancy/authentication/: fastapi_users.py  strategy.py  user.py
fastapi-application/core/: __init__.py  config.py
fastapi-application/core/authetication/: access_token.py  transport.py  user_manager.py
fastapi-application/core/crud/: __init__.py  crud.py
fastapi-application/core/model/: access_token.py  base.py  db_helper.py  user.py
fastapi-application/core/shemas/: user.py
fastapi-application/utils/: __init__.py
