[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = {extras = ["standart"], version = "^0.35.0"}
pydantic = {extras = ["email"], version = "^2.11.7"}
pydantic-settings = "^2.10.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.16.4"
black = "^25.1.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
